se modifico un color

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <style>
         h1{color:#025157}
-        h2{color:#be1104}
+        h2{color:#7404be}
     </style>
     <body>
         <!--ESto es lo que se vera en el navegador WEB-->
