Cambia apariencia de index.html

--- a/index.html
+++ b/index.html
@@ -7,11 +7,23 @@
     <style>
         h1{color:#025157}
         h2{color:#7404be}
+        h3{color: blue;}
+        h4{color: crimson;}
+        p{color: rgb(161, 4, 96)}
+        button{color: #025157}
     </style>
-    <body>
+    <body style="background-color: #fffbf7">
         <!--ESto es lo que se vera en el navegador WEB-->
-        <h1>Build your blog. Build your business..</h1>
-        <h2>esta es una prueba más</h2>
+        <h1><i>Build your blog. Build your business..</i></h1>
+        <h2>esta es una prueba de H2</h2>
+        <h3>este es una prueba de h3</h3>
+        <h4> H4 -- Instantly publish articles, drive more traffic, grow your email list, and
+          see your blog’s impact on sales.</h4>
+        <p> y este es un parrafo Instantly publish articles, drive more traffic, grow your email list, 
+          and see your blog’s impact on sales.</p>
+        <br><br>
+        <p align="center"><b>si esto fuea un texto importante, deberia estar en Negritas</b>, ¿no?</p>
+        <br>
         <form>
             <input type="email" />
             <button type="submit">
