Agregamos css grid

--- a/index.html
+++ b/index.html
@@ -43,6 +43,37 @@
                   font-size: 14px;
                   font-weight: 600}
 
+        .wrapper {
+                  display: grid;
+                  grid-template-columns: repeat(3, 1fr);
+                  grid-gap: 10px;
+                  grid-auto-rows: minmax(100px, auto);
+                }
+                .one {
+                  grid-column: 1 / 3;
+                  grid-row: 1;
+                }
+                .two {
+                  grid-column: 2 / 4;
+                  grid-row: 1 / 3;
+                }
+                .three {
+                  grid-column: 1;
+                  grid-row: 2 / 5;
+                }
+                .four {
+                  grid-column: 3;
+                  grid-row: 3;
+                }
+                .five {
+                  grid-column: 2;
+                  grid-row: 4;
+                }
+                .six {
+                  grid-column: 3;
+                  grid-row: 4;
+                }
+
     </style>
     <body style="background-color: #fffbf7">
       <header class="header">
@@ -66,6 +97,11 @@
          </p>
        </div>
 
+       <video src="rabbit320.webm" controls>
+        <p>Tu navegador no soporta HTML5 video. Aquí está el <a href="rabbit320.webm">enlace del video</a>.</p>
+      </video>
+
+
         <h3>este es una prueba de h3</h3>
         <h4> H4 -- Instantly publish articles, drive more traffic, grow your email list, and
           see your blog’s impact on sales.</h4>
@@ -80,6 +116,15 @@
               Picale aqui &rarr;
             </button>
           </form>
+
+          <div class="wrapper">
+            <div class="one">One</div>
+            <div class="two">Two</div>
+            <div class="three">Three</div>
+            <div class="four">Four</div>
+            <div class="five">Five</div>
+            <div class="six">Six</div>
+          </div>
     </body>
 
 </html>
